# killer

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  README.md  SECURITY.md  SUPPORT.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: README.md  architecture.md  cli.md  compliance.md  dependencies.md  examples.md  installation.md  introduction.md  klr-guide.md  quickstart.md  reports.md  writing-tests.md
examples/: auth_security.klr  database_rules.klr  upload_and_session.klr
mappings/: compliance.toml
src/: analyzer.rs  ci.rs  cli.rs  compliance.rs  config.rs  dependencies.rs  explain.rs  fuzz.rs  git.rs  graph.rs  intelligence.rs  lib.rs  main.rs  report.rs  results.rs  review.rs  scanner.rs  suites.rs  watch.rs
src/attacks/: database.rs  filesystem.rs  http.rs  mod.rs
src/klr/: ast.rs  interpreter.rs  lexer.rs  mod.rs  parser.rs  rule_engine.rs  runner.rs
src/rules/: dependencies.rs  mod.rs  quality.rs  security.rs
suites/: api.klr  authentication.klr  crypto.klr  database.klr  filesystem.klr  web.klr
tests/: integration.rs  klr_e2e.rs
tests/clean_project/: lib.rs
tests/db_project/: dao.py
tests/vulnerable_project/: bad.py  secret.js
