[package]
name = "killer"
version = "1.1.0"
edition = "2021"
rust-version = "1.74"
description = "A Rust security platform: static analysis, the .klr test language, a parallel test framework, project intelligence, code review, and a CI gate."
homepage = "https://killer.blinkdev.me"
documentation = "https://github.com/martin-k-m/killer/tree/main/docs"
license = "Apache-2.0"
repository = "https://github.com/martin-k-m/killer"
readme = "README.md"
keywords = ["security", "security-testing", "static-analysis", "fuzzing", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "killer"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
walkdir = "2"
colored = "2"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
